[package]
name = "lkmtech_motor_driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binary-layout = "3.3.0"
binary_serde = { version = "1.0.24", features = ["std"] }
serde = "1.0.196"
serde-constant = "0.1.0"
socketcan = { version = "3.3.0", features = ["anyhow", "tokio"] }
thiserror = "1.0.56"
