[package]
name = "lkmtech_motor_driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.30"
serde = { version = "1.0.196", features = ["derive"] }
socketcan = { version = "3.3.0", features = ["anyhow", "tokio"] }
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }

[dev-dependencies]
warp = "0.3.6"
pid = "4.0.0"
plotters = "0.3.5"
