[package]
name = "lkmtech_motor_driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.11"
futures = "0.3.30"
futures-util = "0.3.30"
rand = "0.8.5"
serde = { version = "1.0.196", features = ["derive"] }
socketcan = { version = "3.3.0", features = ["anyhow", "tokio"] }
thiserror = "1.0.56"
thread-priority = "0.15.1"
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["full"] }

[dev-dependencies]
pid = "4.0.0"
tch = { version = "0.15.0", features = ["download-libtorch"] }
